src/manifests/04_01_allow_agentcon_api.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: allow-agentcon-api
spec:
  hosts:
  - api.agentcon.local
  endpoints:
  - address: workshop-egress.workshop-system.svc.cluster.local
    ports:
      http: 80
  ports:
  - number: 80
    name: http
    protocol: HTTP
  resolution: DNS
  location: MESH_EXTERNAL
