src/manifests/03_01_allow_internal_db.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-vscode-to-internal-db
spec:
  selector:
    matchLabels:
      app: internal-db
  action: ALLOW
  rules:
  - from:
    - source:
        principals:
        - cluster.local/ns/user-00/sa/user-00-vscode-sa
